+Travel -> section status

--- a/KLS_WEB/KLS_WEB/Views/Offer/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Offer/Index.cshtml
@@ -974,7 +974,7 @@
                             </td>
                             <td style="width:7% !important;text-align:center;">${hrefModal}</td>
                             <td style="width:10% !important;text-align:right;border-right: 0px;">
-                                <a class="btn btn-sm" href="/Travels/AddEdit/${key.travelId}" target="_blank">
+                                <a class="btn btn-sm" href="/Travels/AddEdit/${key.travelId}/${key.sectionId}" target="_blank">
                                     ${icon}
                                 </a>
                                 <a class="btn btn-sm" href="#" onclick="verModal(${key.idoferta})">
