--- a/KLS_WEB/KLS_WEB/Views/Travels/_Monitoreo.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Monitoreo.cshtml
@@ -43,10 +43,10 @@
                             <div class="card-body p-4">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h5 class="card-title"><b>Estatus: @comment.Substatus.Status.Name- @comment.Substatus.Name</b></h5>
+                                        <h5 class="card-title" style="text-transform: uppercase;"><b>Estatus: @comment.Substatus.Status.Name- @comment.Substatus.Name</b></h5>
                                     </div>
                                     <div class="col-md-6 text-right">
-                                        <h5 class="card-title"><b>@comment.CreatedBy</b> @comment.TimeCreated</h5>
+                                        <h5 class="card-title" style="text-transform: uppercase;"><b>@comment.CreatedBy</b> @comment.TimeCreated</h5>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -61,7 +61,7 @@
 
                                     </div>
                                     <div class="col-md-10 text-left">
-                                        <p>@comment.Comment</p>
+                                        <p style="text-transform: uppercase;">@comment.Comment</p>
                                     </div>
                                 </div>
                             </div>
